tests/reject/dup_field.hi
# both compilers must reject a duplicate struct field name (it would
# emit a duplicate C member).
struct P:
    x: int
    x: int
fn main():
    print("x")
